# notifai

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
src/: about.css  about.html  about.js  index.html  settings.css  settings.html  settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: codex.rs  lib.rs  main.rs  notification.rs  projection.rs  settings.rs  usage.rs
