[package]
name = "notifai"
version = "0.1.0"
edition = "2021"

[lib]
name = "notifai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8"
anyhow = "1.0"
regex = "1.10"
strip-ansi-escapes = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
